fixed modal not showing correctly

--- a/src/components/Rules/rules.styles.css
+++ b/src/components/Rules/rules.styles.css
@@ -17,7 +17,7 @@
 
 .rule-show {
   background-color: white;
-  width: 500px;
+  width: 100%;
   height: 100%;
   padding: 2rem;
   display: flex;
